# piper_robot

./: .gitignore  .pre-commit-config.yaml  README.md  cloud_inference_control_collect_v2.py  env.yaml  gripper_switch_monitor.py  main.py  mypy.ini  pyproject.toml  requirements-uv.txt  requirements.txt  ruff.toml  setup.py  sz.py  teleop_collect_example.py
arm/: constants.py  mink_test_gripper.py  mink_test_mujoco_ar.py  mink_test_no_gripper.py  piper_cart_ctrl.py  piper_end_pose.py  piper_joint_ctrl.py  piper_read_arm.py  piper_test_mink.py
arm/mujoco/: piper_description.urdf  piper_with_gripper.xml  piper_with_no_gripper.xml  scene_no_gripper.xml
arm/mujoco_visual/: piper_with_gripper.xml
base/: base_client.py  base_controller.py  base_server.py  constants.py  joystick.py  joystick_dbg.py  swerve_pid.py  swerve_tuner.py
cloud_inference_clean-main/: README.md  hpc_inference_pi05.py  inference_server_pi05_multiview.sh  pi05_inference.py
examples/: matplotlib_visualizer.py  movement_profiles.py  test_communication.py
extra/: DM_SocketCAN.py  fps_counter.py  get_encoder_offsets.py  home_gripper.py  joystick.py  piper_reset.py  piper_reset_left.py  piper_reset_right.py  rerun_visualizer.py  setup.sh  swerve_tuner.py  visualize_interval_history.py
extra/mapping/: .gitignore  data.txt  demo.py  mapping.py
launch/: run.yaml
launch/nodes/: arm_only.yaml  base_only.yaml  full_robot.yaml  iphone_only.yaml  lift_only.yaml
robot/: arm-mujoco.yml  arm-real.yml  base-joystick.yml  base.py  bimanual-arm-mujoco.yml  bimanual-arm-real.yml  bimanual-arm-table-mujoco.yml  bimanual-arm-table-real.yml  communications.py  cone-e.py  cone_e.py  cone_e_mujoco.py  constants.py  dataflow.yml  iphone-dataflow.yml  lift.py  main.py  msgs.py  only-control.yml  rpc.py  test_boundaries.py  timer.py  whole-body-real.yml  whole-body-table-real.yml
robot/arm/: .gitignore  arm.py  arm_ik.py  arm_mujoco.py  arm_mujoco_node.py  arm_mujoco_node_test.py  arm_node.py  arm_node_test.py  arm_piper_control.py  arm_visualizer.py  bimanual_arm_mujoco_node.py  bimanual_arm_node.py  can_config.sh  constants.py  find_all_can_ports.sh  fps_counter.py  go_zero.py  grav_comp.py  ik_solver.py  meshcat_viz.py  mink_bimanual.py  mink_ik.py  (+20 more)
rollout/: README.md  __init__.py  camera.py  controller.py  episode.py  keyboard.py  manipulability.py  recorder.py
src/: convert_to_lerobot.py  eval_offline.py  finetune_pi05.sh  train.sh
test/: arm_joint_plotter.py  arm_joint_plotter_rerun.py  arm_mujoco_joint_plotter.py  test_arm_go_forward_backward.py  test_arm_joint_target.py  test_arm_mujoco_init.py  test_arm_mujoco_joint_target.py  test_arm_mujoco_sine_wave.py  test_arm_set_gain.py  test_call_function_before_init.py  test_cone_e_init.py  test_cone_e_rpc.py
tmp/: convert_to_lerobot_split_multiview.py
(+163 files in other folders)
