[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot"
version = "0.0.2"
description = "Open source bimanual robot"
authors = [
    { name = "NYU GRAIL" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"
dependencies = [
    "phoenix6",
    "numpy",
    "pyzmq",
    "rerun-sdk",
    # Sensors
    "pygame",
    "opencv-python",
    "pyliblzfse",
    "pillow",
    "record3d @ git+ssh://git@github.com/eneserciyes/record3d.git",
    # Simulation and control
    "mujoco>=3.2.7",
    "mink",
    # Utilities
    "tqdm",
    "loop-rate-limiters>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/NYU-robot-learning/robot.git"

[tool.setuptools]
packages = ["robot"]
include-package-data = true

[project.optional-dependencies]
dev = []
