[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot"
version = "0.0.2"
description = "Open source bimanual robot"
authors = [
    { name = "NYU GRAIL" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
    "phoenix6",
    "numpy",
    "pyzmq",
    "pygame",
    "pillow",
    "mujoco>=3.2.7",
    "mink",
    "tqdm",
    "loop-rate-limiters>=1.1.0",
    "pyarrow",
    "dora-rs",
]

[project.urls]
Homepage = "https://github.com/NYU-robot-learning/robot.git"

[tool.setuptools]
packages = ["robot"]
include-package-data = true

[project.optional-dependencies]
dev = []
